manifests/media-apps/prowlarr/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prowlarr
  namespace: media-apps
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  ingress:
    - fromEntities:
        - remote-node
      toPorts:
        - ports:
            - port: "9696"
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudflare-tunnel
            io.kubernetes.pod.namespace: cloudflare
      toPorts:
        - ports:
            - port: "9696"
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: "9696"
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "9696"
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: "7878"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: readarr
      toPorts:
        - ports:
            - port: "8787"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "8989"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: sabnzbd
      toPorts:
        - ports:
            - port: "8080"
